Template of runner for BigANN bench was added.